--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
     <img class="object-cover w-full h-full md:hidden" src="./assets/images/background-pattern-mobile.svg" alt="mobile background image" aria-hidden="true">
     <img class="hidden md:block md:object-cover md:w-full md:h-full" src="./assets/images/background-pattern-desktop.svg" alt="desktop background image" aria-hidden="true">
   </div>
-  <main class="relative mt-36 mx-6 bg-white rounded-lg px-6 pt-6 md:max-w-xl lg:mx-auto">
+  <main class="relative mt-36 mx-6 bg-white rounded-lg px-6 pt-6 md:max-w-xl md:rounded-2xl md:mt-40 md:px-10 md:pt-12 lg:mx-auto">
     <div class="flex items-center gap-6">
-      <img class="w-6" src="./assets/images/icon-star.svg" alt="star">
-      <h1 class="text-3xl font-bold">FAQs</h1>
+      <img class="w-6 md:w-10" src="./assets/images/icon-star.svg" alt="star">
+      <h1 class="text-3xl font-bold md: text-[3.25rem]">FAQs</h1>
     </div>
-    <ul class="divide-y divide-y-pink">
+    <ul class="divide-y divide-y-pink md:pt-5">
       <li>
         <details class="faq mt-6" open>
-          <summary class="w-full cursor-pointer flex gap-4 justify-between font-semibold leading-tight pb-4 group focus:outline-none">
-            <span class="group-hover:text-purple group-focus:text-purple transition ease-out">What is Frontend Mentor, and how will it help me?</span>
+          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
+            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">What is Frontend Mentor, and how will it help me?</span>
             <span class="grid shrink-0">
               <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
               <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
             </span>
           </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6">
+          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
             Frontend Mentor offers realistic coding challenges to help developers improve their
             frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
             all levels and ideal for portfolio building.
@@ -51,14 +51,14 @@
 
       <li>
         <details class="faq mt-6">
-          <summary class="w-full cursor-pointer flex gap-4 justify-between font-semibold leading-tight pb-4 group focus:outline-none">
-            <span class="group-hover:text-purple group-focus:text-purple transition ease-out">Is Frontend Mentor free?</span>
+          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
+            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">Is Frontend Mentor free?</span>
             <span class="grid shrink-0">
               <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
               <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
             </span>
           </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6">
+          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
             Yes, Frontend Mentor offers both free and premium coding challenges, with the free
             option providing access to a range of projects suitable for all skill levels.
           </p>
@@ -67,14 +67,14 @@
 
       <li>
         <details class="faq mt-6">
-          <summary class="w-full cursor-pointer flex gap-4 justify-between font-semibold leading-tight pb-4 group focus:outline-none">
-            <span class="group-hover:text-purple group-focus:text-purple transition ease-out">Can I use Frontend Mentor projects in my portfolio?</span>
+          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
+            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">Can I use Frontend Mentor projects in my portfolio?</span>
             <span class="grid shrink-0">
               <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
               <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
             </span>
           </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6">
+          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
             Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
             way to showcase your skills to potential employers!
           </p>
@@ -83,14 +83,14 @@
 
       <li>
         <details class="faq mt-6">
-          <summary class="w-full cursor-pointer flex gap-4 justify-between font-semibold leading-tight pb-4 group focus:outline-none">
-            <span class="group-hover:text-purple group-focus:text-purple transition ease-out">How can I get help if I'm stuck on a Frontend Mentor challenge?</span>
+          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
+            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">How can I get help if I'm stuck on a Frontend Mentor challenge?</span>
             <span class="grid shrink-0">
               <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
               <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
             </span>
           </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6">
+          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
             The best place to get help is inside Frontend Mentor's Discord community. There's a help
             channel where you can ask questions and seek support from other community members.
           </p>
