--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img class="object-cover w-full h-full md:hidden" src="./assets/images/background-pattern-mobile.svg" alt="mobile background image" aria-hidden="true">
     <img class="hidden md:block md:object-cover md:w-full md:h-full" src="./assets/images/background-pattern-desktop.svg" alt="desktop background image" aria-hidden="true">
   </div>
-  <main class="relative mt-36 mx-6 bg-white rounded-lg px-6 pt-6 md:max-w-xl md:rounded-2xl md:mt-40 md:px-10 md:pt-12 lg:mx-auto">
+  <main class="relative mt-36 mx-6 bg-white rounded-lg px-6 pt-6 md:max-w-xl md:rounded-2xl md:mt-40 md:px-10 md:pt-12 md:mx-auto">
     <div class="flex items-center gap-6">
       <img class="w-6 md:w-10" src="./assets/images/icon-star.svg" alt="star">
       <h1 class="text-3xl font-bold md: text-[3.25rem]">FAQs</h1>
