Added tailwind to project

--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
   
   <title>Frontend Mentor | FAQ accordion</title>
 
-  <!-- Font -->
-  <link rel="stylesheet" type="text/css" href="./style/font.css">
+  <script defer src="./tailwind.config.js"></script>
 
-  <!-- Tailwind play cdn -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="src/tailwind.config.js"></script>
+  <!-- Tailwind -->
+  <script defer src="./tailwind.config.js"></script>
 
-  <!-- Alpine.js core  -->
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="./style/base.css">
+  <link rel="stylesheet" type="text/css" href="./src/output.css">
 
 </head>
 <body class="bg-pink text-purple-dark antialiased">
