--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
   
   <title>Frontend Mentor | FAQ accordion</title>
 
+  <script defer src="./src/faq.js"></script>
+
   <script defer src="./tailwind.config.js"></script>
 
   <!-- Tailwind -->
-  <script defer src="./tailwind.config.js"></script>
+  <script src="./tailwind.config.js"></script>
+
+  <!-- Alpine.js core  -->
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="./src/output.css">
 
 </head>
-<body class="bg-pink text-purple-dark antialiased">
+<body x-data="showQuestions()" class="bg-pink text-purple-dark antialiased">
   <div class="absolute top-0 inset-x-0">
     <img class="object-cover w-full h-full md:hidden" src="./assets/images/background-pattern-mobile.svg" alt="mobile background image" aria-hidden="true">
     <img class="hidden md:block md:object-cover md:w-full md:h-full" src="./assets/images/background-pattern-desktop.svg" alt="desktop background image" aria-hidden="true">
@@ -27,71 +32,20 @@
       <h1 class="text-3xl font-bold md: text-[3.25rem]">FAQs</h1>
     </div>
     <ul class="divide-y divide-y-pink md:pt-5">
-      <li>
-        <details class="faq mt-6" open>
-          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
-            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">What is Frontend Mentor, and how will it help me?</span>
-            <span class="grid shrink-0">
+      <template x-for="question in questions" :key="index">
+        <li>
+          <details class="faq mt-6">
+            <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
+              <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out" x-text="question.question"></span>
+              <span class="grid shrink-0">
               <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
               <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
             </span>
-          </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
-            Frontend Mentor offers realistic coding challenges to help developers improve their
-            frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
-            all levels and ideal for portfolio building.
-          </p>
-        </details>
-      </li>
-
-      <li>
-        <details class="faq mt-6">
-          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
-            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">Is Frontend Mentor free?</span>
-            <span class="grid shrink-0">
-              <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
-              <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
-            </span>
-          </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
-            Yes, Frontend Mentor offers both free and premium coding challenges, with the free
-            option providing access to a range of projects suitable for all skill levels.
-          </p>
-        </details>
-      </li>
-
-      <li>
-        <details class="faq mt-6">
-          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
-            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">Can I use Frontend Mentor projects in my portfolio?</span>
-            <span class="grid shrink-0">
-              <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
-              <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
-            </span>
-          </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
-            Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-            way to showcase your skills to potential employers!
-          </p>
-        </details>
-      </li>
-
-      <li>
-        <details class="faq mt-6">
-          <summary class="w-full cursor-pointer flex gap-4 items-center justify-between font-semibold leading-tight pb-4 group focus:outline-none md:gap-1">
-            <span class="md:text-[1.1rem] group-hover:text-purple group-focus:text-purple transition ease-out">How can I get help if I'm stuck on a Frontend Mentor challenge?</span>
-            <span class="grid shrink-0">
-              <img class="col-start-1 row-start-1 opened-img transition ease-out" src="./assets/images/icon-plus.svg" alt="+">
-              <img class="col-start-1 row-start-1 closed-img transition ease-out" src="./assets/images/icon-minus.svg" alt="-">
-            </span>
-          </summary>
-          <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug">
-            The best place to get help is inside Frontend Mentor's Discord community. There's a help
-            channel where you can ask questions and seek support from other community members.
-          </p>
-        </details>
-      </li>
-
+            </summary>
+            <p class="text-purple-gray text-sm pt-2 pb-6 md:text-base md:leading-snug" x-text="question.answer"></p>
+          </details>
+        </li>
+      </template>
     </ul>
   </main>
   <footer class="fixed bottom-0 inset-x-0 text-center text-xs font-semibold tracking-wide text-purple-dark bg-white/80 py-1 opacity-0 translate-y-2 hover:opacity-100 hover:translate-y-0 focus-within:opacity-100 focus-within:translate-y-0 transform transition ease-in-out duration-150">
